--- a/config
+++ b/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:monospace 9
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -36,7 +36,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec ulauncher
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -99,6 +99,11 @@ set $tag9 "9"
 set $tag10 "10:"
 set $tagtelegram "t:"
 
+# gaps
+gaps inner 10px
+gaps outer 5px
+
+
 # switch to workspace
 bindsym $mod+1 workspace $tag1
 bindsym $mod+2 workspace $tag2
@@ -122,6 +127,13 @@ bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace $tag9
 bindsym $mod+Shift+0 move container to workspace $tag10
+
+set $monitor_main "DisplayPort-0"
+set $monitor_sec "DisplayPort-1"
+
+workspace $tagtelegram output $monitor_sec
+workspace $tag1 output $monitor_sec
+workspace $tag2 output $monitor_main
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -156,27 +168,29 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+# Moving workspaces between screens 
+bindsym $mod+m move workspace to output right
 
 hide_edge_borders both
 
-exec feh --bg-scale Dropbox/Awesome-background-hd-download.jpg
+exec feh --bg-scale ~/Desktop/background.png
 
 set $dunkel "#022234"
-set $dunkler #031730
-set $grau #676E7D
-set $blau #176dad
-set $hell #affcff
+set $dunkler "#031730"
+set $grau "#676E7D"
+set $blau "#176dad"
+set $hell "#affcff"
 
 
 
 
 
-set $bg-color 	         #031730
-set $inactive-bg-color   #022234
-set $text-color          #affcff
-set $inactive-text-color #676E7D
-set $bg-color-active     #176dad
-set $urgent-bg-color     #176dad
+set $bg-color	         "#031730"
+set $inactive-bg-color   "#022234"
+set $text-color          "#affcff"
+set $inactive-text-color "#676E7D"
+set $bg-color-active     "#176dad"
+set $urgent-bg-color     "#176dad"
 
 # window colors
 #                       border              background         text                 indicator
@@ -192,13 +206,13 @@ client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color      
 bar {
         # status_command i3blocks -c ~/.i3/i3blocks.conf
 	# status_command i3status
-	status_command python ~/.i3/i3pystatus/i3pystatus.py $dunkel
+	status_command ~/.config/i3/i3pystatus/bin/python ~/.config/i3/i3pystatus/status.py $dunkel
 	# status_command i3pystatus
 
 	colors {
 		background $bg-color
 		statusline $hell
-	    	separator #757575
+		separator '#757575'
 		#                  border             background         text
 		focused_workspace  $blau         $dunkel   $hell
 		inactive_workspace $dunkler $dunkel $grau
@@ -219,15 +233,6 @@ bar {
 ################################################################
 
 
-bindsym XF86AudioLowerVolume exec amixer sset 'Master' 5%-
-bindsym XF86AudioRaiseVolume exec amixer sset 'Master' 5%+
-bindsym XF86AudioMute exec $(amixer get Master | grep off > /dev/null && amixer -q set Master unmute) || amixer -q set Master mute
-bindsym XF86MonBrightnessDown exec xbacklight -dec 10
-bindsym XF86MonBrightnessUp exec xbacklight -inc 10
-bindsym XF86Display exec arandr
-
-
-
 bindsym Print                  exec  scrot
 bindsym $mod+p	exec scrot --select
 
@@ -240,27 +245,13 @@ bindsym $mod+Shift+F4 exec shutdown now
 #bindsym $mod+Shift+s exec spotify; 
 #bindsym $mod+s workspace spotify
 
-bindsym $mod+q workspace IRC
 
 bindsym $mod+u [urgent=latest] focus
-exec quasselclient
-exec redshift-gtk
-exec seafile-applet
-exec dropbox
-exec telegram-desktop
+
+exec telegram
 exec pasystray
 exec udiskie --smart-tray
-
-
-exec xinput set-prop "TPPS/2 IBM TrackPoint" "Evdev Wheel Emulation" 1
-exec xinput set-prop "TPPS/2 IBM TrackPoint" "Evdev Wheel Emulation Button" 2
-exec xinput set-prop "TPPS/2 IBM TrackPoint" "Evdev Wheel Emulation Timeout" 200
-
-exec xinput set-prop "TPPS/2 IBM TrackPoint" "Evdev Wheel Emulation Axes" 6 7 4 5
-
-exec synclient PalmDetect=1
-
-exec synclient PalmMinWidth=5
+exec --no-startup-id compton
 
 
 
@@ -271,9 +262,7 @@ exec synclient PalmMinWidth=5
 # assign [class=""] $workspace 
 
 assign [class="Spotify"] $tag10
-
-assign [class="quassel"] $tagtelegram
-assign [class="telegram-desktop"] $tagtelegram
+assign [class="TelegramDesktop"] $tagtelegram
 
 
 # exec xrandr --output DP-3 --off --output DP-1 --off --output eDP-1 --mode 1920x1080 --pos 0x0 --rotate normal --output DP-2 --mode 1920x1080 --pos 1920x0 --rotate normal
